# merge-requests-monitor

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  README.md  config.ini.example  main.py  pyproject.toml  requirements.txt  setup.py
.github/: labels.toml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml
.github/workflows/: ci.yml  release.yml
tests/: README.md  __init__.py  test_main.py
